assets/css/style.css
/*
Name:           SEC Calendar
Author:         Gareth J M Saunders
Author URI:     http://www.garethjmsaunders.co.uk
Description:    Common rules for SEC Calendar for Outlook, Google Calendar, iCal, etc.
                This stylesheet is organised according to the SMACSS
                methodology for categorising CSS rules, by Jonathan
                Snook (http://snook.ca).

Version:        4.2.0
Updated:        Wednesday 11 May 2022
*/



/* === 1. BASE =============================
"Base rules are the defaults. They are almost exclusively
single element selectors but it could include attribute
selectors, pseudo-class selectors, child selectors or sibling
selectors. Essentially, a base style says that wherever
this element is on the page, it should look like this." (SMACSS, p.6)
*/

/* Page
*/
body {
    color: #fff;
    display: flex;
    display: -ms-flexbox;
}
/* HTML and BODY for homepage only
*/
.cover-height {
    height: 100%;
}


/* MAIN CONTENT and FOOTER
   Text and links
*/
main,
main a,
footer a {
    color: white;
}

main a:link,main a:visited,main a:active,
footer a:link,footer a:visited,footer a:active {
    text-decoration: underline;
}
main a:hover,
footer a:hover {
    color: rgba(255,255,255,.5);
    text-decoration: none;
}
main a.btn {
    text-decoration: none;
}

main p,
main dd,
.next-feasts {
    font-weight: 300;
}

.next-feasts {
    font-size: 1em;
    margin: 0 0 1.25em 0.3em;
}

/* HEADINGS
Create bigger gap between paragraphs
*/
h3 {
    padding-top: 1.5rem;
}


/* === 2. LAYOUT ===========================
"Layout rules divide the page into sections. Layouts hold
one or more modules together." (SMACSS, p.7)
*/

/* MASTHEAD
   header.masthead includes SEC digital calendar title and menu
*/
.masthead {
    margin-bottom: 2rem;
    padding-bottom: 1rem;
}
.masthead-brand {
    margin-bottom: 0;
}

/* NAVIGATION
*/
.nav-masthead .nav-link {
    padding: .25rem 0;
    border-bottom: .25rem solid transparent;
}
.nav-masthead .nav-link + .nav-link {
    margin-left: 1rem;
}

/* MAIN
*/
main {
    margin-bottom: 2rem;
}
.homepage main {
    margin-bottom: -1rem;
}

/* HOMEPAGE
*/
.homepage-feast--tomorrow,
.homepage-feast--next {
    margin-top: 2rem;
    padding-left: 1rem !important;
}
.homepage-rcl {
    padding-bottom: 2em;
}


/* FOOTER
*/
footer ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}
footer li {
  float: left;
}
footer li a {
  display: block;
}

/* === 3. MODULES ==========================
"Modules are the reusable, modular parts of our design.
They are the callouts, the sidebar sections, the product
lists and so on." (SMACSS, p.7)
*/

/* Cover */
.cover-container {
    max-width: 42em;
}

/* Homepage main content module for today's information */
.inner.cover {
    background-color: rgba(0,0,0,.5);
    border-radius: 15px;
    padding: 1.5rem 1.5rem 1.5rem;
    box-shadow:  0 0 5rem rgba(0, 0, 0, .5);
    margin-top: 1rem;
}

.embed-calendar-code {
    font-family: "Andale Mono", Consolas, monospace;
    font-size: 0.9rem;
    height: 8rem;
    width: 100%;
}

.alert-sec,
.alert-sec a.alert-link,
a.view-more {
    color: white;
}

a.view-more {
    font-weight: 300;
}

.alert-sec {
    border-color: transparent;
    border-radius: 10px;
    box-shadow:  0 0 2rem rgba(0,0,0,.5);
    margin: 3rem 0;
}
.alert-sec a:link.alert-link,
.alert-sec a:visited.alert-link,
.alert-sec a:active.alert-link,
.view-more a:active {
    text-decoration: underline;
}
.alert-sec a:hover.alert-link,
.view-more a:hover {
    text-decoration: none;
}

/* Browser extensions alert icons */

.browser-icon {
    background-repeat: no-repeat;
    padding-left: 29px;
    position: relative;
}

.browser-icon:before {
    position: absolute;
    top: 0;
}

.browser-chrome {
    background-image: url(../icons/internet-browser-chrome.png);
}

.browser-firefox {
    background-image: url(../icons/internet-browser-firefox.png);
}

.browser-edge {
    background-image: url(../icons/internet-browser-edge.png);    
}

/* Homepage readings and collects  */

.readings-collect {
    border-left: 2px dashed white;
    display: none;
    font-weight: 100;
    padding-left: 1.3rem;
}


/* Homepage NEXT feasts table */

/* Layout */
.homepage-next-feast-table tr td {
    padding: 0.5rem;
    vertical-align: top;
}

    /* row 1 */
    .next-date-feast-row {
        cursor: pointer;
    }
        .next-date-cell {
            white-space: nowrap;
        }

        .next-feast-cell {}

    /* row 2 */
    .next-readings-row {}

        .next-readings-cell {}

            .next-readings-div {
                font-weight: 100;
                padding-left:  1.5rem;
                border-left: 2px dashed white;
            }
            .next-readings-div-hide {
                display: none;
            }

/* Theme */
.sunday {
    color: gold;
}
.next-date-feast-row:hover {
    xcolor: #9caab4;
    opacity: 0.6;
}
.js-selected-row {
    font-weight: bold;
}
.js-selected-row:hover {
    color: white;
    opacity: 1;
}
.js-selected-row.sunday:hover {
    color: gold;
    opacity: 1;
}



/* === 4. STATE ============================
"State rules are ways to describe how our modules or
layouts will look when in a particular state. Is it hidden
or expanded? Is it active or inactive? They are about describing
how a module or layout looks on screens that
are smaller or bigger. They are also about describing
how a module might look in different views like the
home page or the inside page." (SMACSS, p.7)
*/



/* === 5. THEME ============================
"Theme rules are similar to state rules in that
they describe how modules or layouts might look. Most
sites don’t require a layer of theming but it is good to be
aware of it." (p.7)
*/


.darkglass {
    background:  rgba(0,0,0,0.5);
}


/* BACKGROUND (damask)
   Pattern from Pattern Cooler
   http://www.patterncooler.com/editor/?P=370B3B280329_175
*/
.damask {
    background-repeat: both;
    background-position: all;
}
.damask-black   {background-image: url('../../assets/img/damask-black.png');}
.damask-default {background-image: url('../../assets/img/damask-default.png');}
.damask-green   {background-image: url('../../assets/img/damask-green.png');}
.damask-hangings-removed {background-image: url('../../assets/img/damask-hangings-removed.png');}
.damask-lenten-array     {background-image: url('../../assets/img/damask-lenten-array.png');}
.damask-red     {background-image: url('../../assets/img/damask-red.png');}
.damask-rose    {background-image: url('../../assets/img/damask-rose.png');}
.damask-violet  {background-image: url('../../assets/img/damask-violet.png');}
.damask-white   {background-image: url('../../assets/img/damask-white.png');}


/* MASTHEAD LINK
*/
.masthead-brand a {
    color: white;
    text-decoration: none;
}
.masthead-brand a:hover {
    color: rgba(255, 255, 255, .75);
}


/* NAVIGATION
*/
.nav-masthead .nav-link {
    background-color: transparent;
    color: rgba(255, 255, 255, .75);
    font-weight: 700;
}
.nav-masthead .nav-link:hover,
.nav-masthead .nav-link:focus {
    border-bottom-color: rgba(255, 255, 255, .25);
}
.nav-masthead .active {
    color: #fff;
    border-bottom-color: #fff;
}


/* FEAST INFO
*/
.season,
.translated,
.homepage-feast--tomorrow {
    opacity: 0.5;
}
.translated {
    font-style: italic;
}

.float-right {
    float: right;
}

/* Soften the harshness of the badge which was distracting */
.feast-class.badge-light {
    background-color: rgba(255,255,255,.5);
}

/* LITURGICAL COLOURS
 */
.rubric {
    opacity: 0.5;
}




/* === 6. Responsive CSS ============================
Additional rules to enable responsive CSS on mobile devices.
*/

/* MASTHEAD
*/
@media (min-width: 48em) {
    .masthead-brand {
        float: left;
    }
    .nav-masthead {
        float: right;
    }
}

